...
                            <constraint firstItem="kpR-PA-41D" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="cML-td-Fe9"/>
                            <constraint firstAttribute="bottom" secondItem="kpR-PA-41D" secondAttribute="bottom" constant="30" id="plO-w5-m5e"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Choose task from To-do list" largeTitleDisplayMode="always" id="Hqc-t6-0wn">
                        <barButtonItem key="backBarButtonItem" title="Back" id="7xY-xs-Y6R"/>
                        <barButtonItem key="rightBarButtonItem" title="Settings" image="gear" catalog="system" id="M6u-rR-Cn0">
                            <connections>
                                <action selector="openSettings:" destination="BYZ-38-t0r" id="TaL-KX-JnP"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
