...
        timer = createTimer()
        startTime = CACurrentMediaTime()
        timer?.fire()
    }
    
    func pauseTimer() {
        guard let start = startTime, let createdTimer = timer else { return }
        createdTimer.invalidate()
        totalTimeElapsed = (totalTimeElapsed ?? 0) + (CACurrentMediaTime() - start)
        startTime = nil
    }
    
    func terminateTimer() {
...
